fix menu on mobile, same commit with kuzymuzy.ru

--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,10 @@ input:checked + .slider:before {
 
 
 @media (max-width: 660px) {
-
+    body.lock-scroll {
+        overflow: hidden;
+    }
+    
     .modal-content {
         max-width: 500px;
         max-height: 550px;
@@ -498,8 +501,8 @@ input:checked + .slider:before {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        height: 100vh;
+        width: 100vw;
         padding: 20px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         z-index: 1000;
